Table users {
    id int [pk, increment, unique, not null]
    first_name varchar(255) [not null]
    last_name varchar(255) [not null]
    email varchar(255) [not null]
    password varchar(255) [not null]
}

Table addresses {
  id bigint [pk, increment, not null, unique]
  addressable_type varchar(255) [not null]
  addressable_id int [not null]
  country_id int [default: null, ref: > countries.id]
  type varchar(255) [not null, note: 'billing, shipping, both']
  default tinyint(1) [default: 0]
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  email varchar(255) [not null]
  sex varchar(2) [not null]
  phone varchar(50) [not null]
  vat_number varchar(25) [null]
  fiscal_code varchar(25) [not null]
  company_name varchar(255) [null]
  address_line_1 varchar(255) [not null, note: 'street address, including the house number and street name']
  address_line_2 varchar(255) [null, note: 'apartment, suite, unit, building, floor, etc.']
  city varchar(100) [not null]
  state varchar(10) [not null]
  zip varchar(10) [not null]
  birth_date date [null]
  birth_place varchar(100) [null]
  notes text [null]
}

Table countries {
    id int [pk, increment, unique, not null]
    name varchar(255) [not null]
    iso_2 char(2) [not null]
    iso_3 char(3) [not null]
    phone_code varchar(20) [not null]
    currency_code char(3) [not null]
    flag_emoji varchar(50) [not null]
    capital varchar(150) [not null]
    native varchar(150) [not null]
}

Table country_tax_class {
    id int [pk, increment, unique, not null]
    country_id int [not null, ref: > countries.id]
    tax_class_id int [not null, ref: > tax_classes.id]
    rate decimal(8,2) [not null]
}

Table tax_classes {
    id int [pk, increment, unique, not null]
    name varchar(255) [not null]
}

Table currencies {
    id int [pk, increment, unique, not null]
    country_id int [null, ref: > countries.id]
    name varchar(100) [not null]
    code char(3) [not null]
    symbol varchar(10) [not null]
    exchange_rate decimal(10,4) [not null]
    decimal_places tinyint [not null, default: 2]
    enabled tinyint(1) [default: 0]
    default tinyint(1) [default: 0]
}

Table orders {
    id int [pk, increment, unique, not null]
    user_id int [null, ref: > users.id]
    identifier varchar(100) [not null]
    shipping_status_id int [null, ref: > order_shipping_statuses.id]
    status varchar(50) [not null, note: 'pending, processing, completed, cancelled...']
    tracking_code varchar(150) [null]
    tracking_link varchar(255) [null]
    last_tracked_at datetime [null]
    courier_code varchar(50) [null]
    sub_total_taxable decimal(10,2) [not null, note: 'somma dei totali dei prodotti senza tasse']
    sub_total_tax decimal(10,2) [not null, note: 'somma delle tasse dei prodotti']
    sub_total decimal(10,2) [not null, note: 'somma dei totali dei prodotti']
    shipping_fee decimal(10,2) [not null, default: '0', note: 'costo spese di spedizione']
    payment_fee decimal(10,2) [not null, default: '0', note: 'pagato dal cliente']
    discount_code varchar(255) [not null, note: 'codice sconto']
    discount_amount decimal(10,2) [not null, default: '0', note: 'valore sconto sul carrello']
    total_final decimal(10,2) [not null, note: 'totale finale ordine']
    user_first_name varchar(255) [not null]
    user_last_name varchar(255) [not null]
    user_email varchar(255) [not null]
    addresses json [not null, note: 'tutti i dati degli indirizzi salvati statici al momento dell\'ordine, formato: {"billing": {}, "shipping": {}}']
    customer_notes text [null]
    admin_notes text [null]
    approved_at datetime [null]
}

Table order_lines {
    id int [pk, increment, unique, not null]
    order_id int [not null, ref: > orders.id]
    product_item_id int [not null, ref: > product_items.id]
    product_name varchar(255) [not null]
    product_sku varchar(255) [not null]
    unit_price decimal(10,2) [not null, note: 'prezzo unitario di listino']
    unit_discount decimal(10,2) [not null, default: '0', note: 'sconto unitario']
    unit_final_price decimal(10,2) [not null, note: 'prezzo finale prodotto inclusi sconti']
    unit_final_price_tax decimal(10,2) [not null, note: 'tassa unitaria calcolata su unit_final_price']
    unit_final_price_taxable decimal(10,2) [not null, note: 'prezzo unitario imponibile calcolato su unit_final_price']
    qty mediumint [not null, note: 'quantità ordinata']
    total_final_price decimal(10,2) [not null, note: 'prezzo totale finale inclusi sconti e tasse']
    tax_rate decimal(10,2) [not null, note: 'aliquota tassa applicata']
    product_item json [not null, note: 'tutti i dati del prodotto salvati statici al momento dell\'ordine']
}

Table order_shipping_statuses {
    id int [pk, increment, unique, not null]
    external_code varchar(255) [not null]
    name varchar(255) [not null]
}

Table brands {
    id int [pk, increment, unique, not null]
    name int [not null]
}

// TODO: add min_value (discount is applicable if total is greater than min value)
// TODO: add max_number_of_uses and number_of_uses (discount is applicable if number_of_uses < max_number_of_uses)
Table discounts {
    id int [pk, increment, unique, not null]
    discountable_type varchar(255) [not null]
    discountable_id int [not null]
    type varchar(255) [not null, note: 'percentage, fixed']
    value decimal(10,2) [not null]
    active tinyint(1) [default: '1']
    starts_at datetime [not null]
    ends_at datetime [not null]
}

Table product_categories {
    id int [pk, increment, unique, not null]
    name varchar(255) [not null]
    parent_id int [not null, ref: > product_categories.id]
    active tinyint(1) [default: '1']
    order smallint [not null]
}

Table product_category_product {
    id int [pk, increment, unique, not null]
    product_id int [not null, ref: > products.id]
    product_category_id int [not null, ref: > product_categories.id]
}

Table products {
    id int [pk, increment, unique, not null]
    brand_id int [not null, ref: > brands.id]
    product_type_id int [not null, ref: > product_types.id]
    tax_class_id int [not null, ref: > tax_classes.id]
    name varchar(255) [not null]
    status varchar(255) [not null]
    new tinyint(1) [default: '0']
    in_evidence tinyint(1) [default: '0']
    active tinyint(1) [default: '1']
    visible_from datetime [null]
    visible_until datetime [null]
    description text [null]
    description_short text [null]
    images json [null]
    measuring_unit varchar(50) [not null, note: 'kg, g, lt, ml, cm, m, etc...']
    weight decimal(8,2) [null]
    length decimal(8,2) [null]
    width decimal(8,2) [null]
    depth decimal(8,2) [null]
    metadata json [null, note: 'metadati del prodotto (per SEO)']
}

// definisce i tipi di prodotti
Table product_types {
    id int [pk, increment, unique, not null]
    name varchar(255) [not null]
}

// Colore, Taglia, etc.
Table product_variants {
    id int [pk, increment, unique, not null]
    product_type_id int [not null, ref: > product_types.id]
    name varchar(255) [not null]
    order smallint [not null]
}

// Colore: Rosso, Verde, Blu, etc.
Table product_variant_options {
    id int [pk, increment, unique, not null]
    product_variant_id int [not null, ref: > product_variants.id]
    value json [not null]
    order smallint [not null]
}

// maglia rossa xl (determina il risultato finale del product_item)
Table product_configuration {
    id int [pk, increment, unique, not null]
    product_item_id int [not null, ref: > product_items.id]
    product_variant_option_id int [not null, ref: > product_variant_options.id]
}

Table product_items {
    id int [pk, increment, unique, not null]
    product_id int [not null, ref: > products.id]
    name varchar(255) [not null]
    slug varchar(255) [not null]
    status varchar(20) [not null]
    active tinyint(1) [default: '1']
    sku varchar(255) [null]
    ean varchar(255) [null]
    visible_from datetime [null]
    visible_until datetime [null]
    description text [null]
    description_short text [null]
    images json [null]
    weight decimal(8,2) [null]
    length decimal(8,2) [null]
    width decimal(8,2) [null]
    depth decimal(8,2) [null]
    metadata json [null, note: 'metadati del prodotto (per SEO)']
}

// definisce i campi custom per i tipi di prodotti
Table product_custom_fields {
    id int [pk, increment, unique, not null]
    product_type_id int [not null, ref: > product_types.id]
    name varchar(255) [not null]
    required tinyint(1) [default: '0']
    order smallint [not null]
    type varchar(255) [not null]
    options json [null]
}

// definisce i valori custom per i tipi di prodotti
Table product_custom_field_product_item {
    id int [pk, increment, unique, not null]
    product_item_id int [not null, ref: > product_items.id]
    product_custom_field_id int [not null, ref: > product_custom_fields.id]
    value json [not null]
}

Table inventories {
    id int [pk, increment, unique, not null]
    product_item_id int [not null, ref: > product_items.id]
    stock mediumint [not null]
    stock_min mediumint [null, note: 'quantità minima di stock (per allerta sottoscorta)']
    price decimal(10,2) [not null]
    purchase_price decimal(10,2) [null, note: 'costo di acquisto del prodotto']
    price_includes_tax bool [not null, default: false, note: 'se true il prezzo e` comprensivo di IVA']
}

Table carts {
    id int [pk, increment, unique, not null]
    user_id int [null, ref: > users.id]
    order_id int [ref: > orders.id, note: 'popolato se il carrello è convertito']
    identifier varchar(255) [not null]
    status varchar(30) [not null]
    sub_total_taxable decimal(10,2) [not null, note: 'somma dei totali dei prodotti senza tasse']
    sub_total_tax decimal(10,2) [not null, note: 'somma delle tasse dei prodotti']
    sub_total decimal(10,2) [not null, note: 'somma dei totali dei prodotti']
    shipping_fee decimal(10,2) [not null, default: '0', note: 'costo spese di spedizione']
    payment_fee decimal(10,2) [not null, default: '0', note: 'pagato dal cliente']
    discount_code varchar(255) [not null, note: 'codice sconto']
    discount_amount decimal(10,2) [not null, default: '0', note: 'valore sconto sul carrello']
    total_final decimal(10,2) [not null, note: 'totale finale carrello']
    user_first_name varchar(255) [not null]
    user_last_name varchar(255) [not null]
    user_email varchar(255) [not null]
    addresses json [not null, note: 'tutti i dati degli indirizzi salvati statici, formato: {"billing": {}, "shipping": {}}']
    notes text [null]
}

Table cart_lines {
    id int [pk, increment, unique, not null]
    cart_id int [not null, ref: > carts.id]
    product_item_id int [not null, ref: > product_items.id]
    product_name varchar(255) [not null]
    product_sku varchar(255) [not null]
    unit_price decimal(10,2) [not null, note: 'prezzo unitario di listino']
    unit_discount decimal(10,2) [not null, default: '0', note: 'sconto unitario']
    unit_final_price decimal(10,2) [not null, note: 'prezzo finale prodotto inclusi sconti']
    unit_final_price_tax decimal(10,2) [not null, note: 'tassa unitaria calcolata su unit_final_price']
    unit_final_price_taxable decimal(10,2) [not null, note: 'prezzo unitario imponibile calcolato su unit_final_price']
    qty mediumint [not null, note: 'quantità ordinata']
    total_final_price decimal(10,2) [not null, note: 'prezzo totale finale inclusi sconti e tasse']
    tax_rate decimal(10,2) [not null, note: 'aliquota tassa applicata']
    product_item json [not null, note: 'tutti i dati del prodotto salvati statici']
}
